# nocap-test

./: .gitignore  README.md  pyproject.toml  run.ps1  run.sh
src/bottlecap/: train_gpt2.py
