[project]
name = "bottlecap"
version = "0.1.0"
description = ""
authors = [
    {name = "Jiří Filip",email = "j.f.ilip@seznam.cz"}
]
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "huggingface-hub (>=0.35.3,<0.36.0)",
    "torch (>=2.8.0,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)"
]
packages = [
    { include = "bottlecap", from = "src"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
